--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
   <button class="toggle-dark" onclick="toggleDarkMode()">🌙 Toggle Theme</button>
   <button class="reset-progress" onclick="resetProgress()">🔄 Reset Progress</button>
+  
   <h1>✅ 10-Day Java Interview Preparation Tracker</h1>
+  <a href="project-brief.html" class="instructions-btn">📋 Instructions</a>
   <div class="motivation" id="quote"></div>
   <div id="timetable"></div>
 
