--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <button class="reset-progress" onclick="resetProgress()">🔄 Reset Progress</button>
   
   <h1>✅ 10-Day Java Interview Preparation Tracker</h1>
-  <a href="project-brief.html" class="instructions-btn">📋 Instructions</a>
+  <a href="project-brief.html" target="_blank" class="instructions-btn">📋 Instructions</a>
   <div class="motivation" id="quote"></div>
   <div id="timetable"></div>
 
